# globis-edge

./: .cursorrules  .gitignore  AGENTS.md  CHROME_BATCH_GENERATION_GUIDE.md  CLAUDE.md  CLEANUP_SCRIPT.sh  COMMIT_COMPLETE.md  COMMIT_INSTRUCTIONS.txt  CONSTITUTION.md  ETHICS.md  EXECUTION_CHECKLIST.md  FILES_CREATED_TODAY.md  FINAL_AUDIT.md  FINAL_CLEANUP_SUMMARY.md  FINAL_INSTRUCTIONS.md  FINAL_PUSH_STRATEGY.md  FINAL_SECURITY_CLEANUP.sh  FINAL_SUBMISSION_STATUS.md  GIT_COMMIT_READY.md  GLOBIS_EDGE_VIDEO_PROMPT.md  IMMEDIATE_ACTION_PLAN.md  INVARIANTS.md  KAGGLE_WRITEUP.md  KEY_LINKS.md  LANDING_PAGE_DESIGN_SUMMARY.md  LICENSE  Makefile  NOTEBOOK_FINAL_NOTES.md  NOTEBOOK_IMPROVEMENTS.md  PRD.md  PUSH_TO_GITHUB.sh  QUICK_REFERENCE.md  QUICK_START_CLEANUP.txt  README.md  README_VIDEO_PRODUCTION.md  READY_FOR_GITHUB.md  REAL_GEMMA4_RESULTS.json  REMOTION_EXECUTION_COMPLETE.md  REMOTION_READY.txt  REPO_AUDIT_RESULTS.md  (+21 more)
archive/: FINAL_AUDIT.md  PRD_FINAL.md  PRD_v10_FINAL_HARDENED.md  PRD_v8.0_Globis_Edge.md  PRD_v9.0_Globis_Edge.md  TECHNICAL_SPECIFICATION.md  TECHNICAL_SPECIFICATION_ARCHIVED.md  UIUX_SPECIFICATION.md
demo_artifacts/: pi_demo_api_output.txt
deployment/: README.md
globis-edge-ui/: index.html  package-lock.json  package.json  vite.config.ts
globis-edge-video/: QUICKSTART.md  README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
governance/: dpia.yaml  dsa.yaml
prompts/: auditor.md
scripts/: globis-edge.service  setup_hotspot.sh
tests/: conftest.py
video/: ASSEMBLY_PLAN.md  DEMO_SCRIPT.md  assemble_30_scene_video.sh  (+5 more)
(+109 files in other folders)
