[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "globis-edge"
version = "0.1.0"
description = "Offline, on-device caseworker companion for refugee reception (Gemma 4 Good Hackathon submission)."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Nadu" }]
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "sqlcipher3>=0.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
ui = [
    "PySide6>=6.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
